git-svn-id: https://only.mawhrin.net/repos/FBReaderJ/trunk@27 6a642e6f-84f6-412e-ac94-c4a38d5a04b0